--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,12 @@
 
 body {
 	width: 100%;
-    overflow-x: hidden;
+	overflow-x: hidden;
+}
+
+a {
+	text-decoration: none;
+	color: #393c41;
 }
 
 @keyframes animateDown {
